# obelisk-cli

./: .gitmodules  CMakeLists.txt  dict.h  extensions.lua  group_props.lua  groups.lua  luafuncs.cpp  luafuncs.h  luascript.cpp  luascript.h  main.cpp
